--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,32 +12,15 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.imperial_to_si.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_imperial_to_si"
+        android:name="com.example.imperial_to_si.ui.imperialtosi.ImperialToSIFragment"
+        android:label="@string/menu_imperial_to_si"
+        tools:layout="@layout/fragment_imperial_to_si" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.imperial_to_si.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_si_to_imperial"
+        android:name="com.example.imperial_to_si.ui.sitoimperial.SIToImperialFragment"
+        android:label="@string/menu_si_to_imperial"
+        tools:layout="@layout/fragment_si_to_imperial" />
 
-    <fragment
-        android:id="@+id/nav_tools"
-        android:name="com.example.imperial_to_si.ui.tools.ToolsFragment"
-        android:label="@string/menu_tools"
-        tools:layout="@layout/fragment_tools" />
-
-    <fragment
-        android:id="@+id/nav_share"
-        android:name="com.example.imperial_to_si.ui.share.ShareFragment"
-        android:label="@string/menu_share"
-        tools:layout="@layout/fragment_share" />
-
-    <fragment
-        android:id="@+id/nav_send"
-        android:name="com.example.imperial_to_si.ui.send.SendFragment"
-        android:label="@string/menu_send"
-        tools:layout="@layout/fragment_send" />
 </navigation>
