--- a/app/src/main/res/layout/fragment_si_to_imperial.xml
+++ b/app/src/main/res/layout/fragment_si_to_imperial.xml
@@ -17,9 +17,10 @@
 
     <EditText
         android:id="@+id/si_amount"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_width="275dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="64dp"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
