--- a/app/src/main/res/layout/fragment_si_to_imperial.xml
+++ b/app/src/main/res/layout/fragment_si_to_imperial.xml
@@ -7,11 +7,14 @@
 
     <TextView
         android:id="@+id/text_si_to_imperial"
-        android:layout_width="275dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="64dp"
-        android:inputType="number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,7 +51,7 @@
     <TextView
         android:id="@+id/result_si_to_imperial"
         android:layout_width="275dp"
-        android:layout_height="44dp"
+        android:layout_height="57dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="268dp"
         android:layout_marginEnd="8dp"
